--- a/index.html
+++ b/index.html
@@ -1,1 +1,130 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><title>Tiago Borges Nascimento</title><link href="/static/css/main.5f361e03.chunk.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script>!function(e){function t(t){for(var n,i,l=t[0],f=t[1],a=t[2],c=0,s=[];c<l.length;c++)i=l[c],Object.prototype.hasOwnProperty.call(o,i)&&o[i]&&s.push(o[i][0]),o[i]=0;for(n in f)Object.prototype.hasOwnProperty.call(f,n)&&(e[n]=f[n]);for(p&&p(t);s.length;)s.shift()();return u.push.apply(u,a||[]),r()}function r(){for(var e,t=0;t<u.length;t++){for(var r=u[t],n=!0,l=1;l<r.length;l++){var f=r[l];0!==o[f]&&(n=!1)}n&&(u.splice(t--,1),e=i(i.s=r[0]))}return e}var n={},o={1:0},u=[];function i(t){if(n[t])return n[t].exports;var r=n[t]={i:t,l:!1,exports:{}};return e[t].call(r.exports,r,r.exports,i),r.l=!0,r.exports}i.m=e,i.c=n,i.d=function(e,t,r){i.o(e,t)||Object.defineProperty(e,t,{enumerable:!0,get:r})},i.r=function(e){"undefined"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:"Module"}),Object.defineProperty(e,"__esModule",{value:!0})},i.t=function(e,t){if(1&t&&(e=i(e)),8&t)return e;if(4&t&&"object"==typeof e&&e&&e.__esModule)return e;var r=Object.create(null);if(i.r(r),Object.defineProperty(r,"default",{enumerable:!0,value:e}),2&t&&"string"!=typeof e)for(var n in e)i.d(r,n,function(t){return e[t]}.bind(null,n));return r},i.n=function(e){var t=e&&e.__esModule?function(){return e.default}:function(){return e};return i.d(t,"a",t),t},i.o=function(e,t){return Object.prototype.hasOwnProperty.call(e,t)},i.p="/";var l=this["webpackJsonpmeu-site"]=this["webpackJsonpmeu-site"]||[],f=l.push.bind(l);l.push=t,l=l.slice();for(var a=0;a<l.length;a++)t(l[a]);var p=f;r()}([])</script><script src="/static/js/2.1e77b4a1.chunk.js"></script><script src="/static/js/main.4de6dd35.chunk.js"></script></body></html>
+<!DOCTYPE html>
+<html lang="pt-br">
+    <head>
+        <title>Tiago Borges Nascimento</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="css/normalize.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <link href="css/style.css" rel="stylesheet">
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    </head> 
+    <body>
+    <div id="fundo" class="container-fluid">
+        <div class="text-center">
+            <img src="imagens/IMG-20191025-WA0008.jpg" class="img-fluid rounded border border-0 img-perfil" alt="...">
+          </div>
+        <!-- 
+            Cabeçalho
+        -->
+        <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand" href="#">Tiago Borges Nascimento</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+              <ul class="navbar-nav">
+                <li class="nav-item active">
+                  <a class="nav-link" href="#sobremim">Sobre mim<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#hab">Habilidades</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#contato">Contato</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+        <!-- 
+            Cabeçalho-Fim
+        -->
+        <!--
+            Sobre-mim
+        -->
+        <section id="sobremim">
+            <div class="sobre-mim">
+            <h1>Sobre mim</h1>
+                <h4>
+                    E aí, prazer em conhecê-lo(ª)! 
+                    <br>Meu nome é <u>Tiago</u> e eu tenho 21 anos.
+                    <br>Moro em Barueri - São Paulo.</br>
+                    Formando recente em Análise e Desenvolvimento de Sistemas pela Fatec.
+                    <br>Atualmente estagiário em desenvolvimento Java na Ericsson<br>
+                </h4>
+            </div>
+            <div class="center-bold"></div>
+        </section>
+        <!--
+            Sobre mim - Fim
+        -->
+        <section id="hab" class="container-fluid principais-habilidades">
+            <h1>Principais Habilidades</h1>
+            <div class=polaroid>
+                <img class="img-fluid" src="imagens/javascript-vs-html-vs-css-1024x683.jpg">
+                <div class="overlay">
+                    <div class="text">HTML5 + CSS3 + JS</div>
+                  </div>
+            </div>
+            <div class=polaroid>
+                <img class="img-fluid" src="imagens/java-8.jpg">
+                <div class="overlay">
+                    <div class="text">Java</div>
+                  </div>
+            </div>
+            <div class=polaroid>
+                <img class="img-fluid" src="imagens/OG-Spring.png">
+                <div class="overlay">
+                    <div class="text">Spring</div>
+                  </div>
+            </div>
+            <div class=polaroid>
+                <img class="img-fluid" src="imagens/kotlin-android-s-official-language-01.png">
+                <div class="overlay">
+                    <div class="text">Kotlin</div>
+                  </div>
+            </div>
+            <div class=polaroid>
+                <img class="img-fluid" src="imagens/asp-net-core-identity-with-patterns.jpg">
+                <div class="overlay">
+                    <div class="text">.NET Core</div>
+                  </div>
+            </div>
+            <div class=polaroid>
+                <img class="img-fluid" src="imagens/20175743697139.jpg">
+                <div class="overlay">
+                    <div class="text">SQL</div>
+                  </div>
+            </div>
+            <div class=polaroid>
+                <img class="img-fluid" src="imagens/thymeleaf.png">
+                <div class="overlay">
+                    <div class="text">Thymeleaf</div>
+                  </div>
+            </div>
+            <div class=polaroid>
+                <img class="img-fluid" src="imagens/docker-na-pratica-como-construir-uma-aplicacao-2.png">
+                <div class="overlay">
+                    <div class="text">Docker</div>
+                  </div>
+            </div>
+            <div class=polaroid>
+                <img class="img-fluid" src="imagens/design-patterns.png">
+                <div class="overlay">
+                    <div class="text">Design Patterns</div>
+                  </div>
+            </div>
+        </section>
+        <!-- Fim Habilidades-->
+    </div>
+    <section id="contato">
+      <h1>Contato</h1>
+      <div class="container-fluid rodape rounded">
+        E-mail: tiagoborgesnascimento2020@gmail.com
+        <br>Tel: (11) 984262404
+      </div>
+    </section>
+      </body>
+</html> 
