--- a/index.html
+++ b/index.html
@@ -16,9 +16,6 @@
         <div class="text-center">
             <img src="imagens/IMG-20191025-WA0008.jpg" class="img-fluid rounded border border-0 img-perfil" alt="...">
           </div>
-        <!-- 
-            Cabeçalho
-        -->
         <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand" href="#">Tiago Borges Nascimento</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -27,7 +24,7 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
               <ul class="navbar-nav">
                 <li class="nav-item active">
-                  <a class="nav-link" href="#sobremim">Sobre mim<span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="#sobre-mim">Sobre mim<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#hab">Habilidades</a>
@@ -38,13 +35,7 @@
               </ul>
             </div>
           </nav>
-        <!-- 
-            Cabeçalho-Fim
-        -->
-        <!--
-            Sobre-mim
-        -->
-        <section id="sobremim">
+        <section id="sobre-mim">
             <div class="sobre-mim">
             <h1>Sobre mim</h1>
                 <h4>
@@ -57,9 +48,6 @@
             </div>
             <div class="center-bold"></div>
         </section>
-        <!--
-            Sobre mim - Fim
-        -->
         <section id="hab" class="container-fluid principais-habilidades">
             <h1>Principais Habilidades</h1>
             <div class=polaroid>
@@ -117,7 +105,6 @@
                   </div>
             </div>
         </section>
-        <!-- Fim Habilidades-->
     </div>
     <section id="contato">
       <h1>Contato</h1>
