--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                   <a class="nav-link" href="#sobre-mim">Sobre mim<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#hab">Habilidades</a>
+                  <a class="nav-link" href="#habilidades">Habilidades</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#contato">Contato</a>
@@ -48,7 +48,7 @@
             </div>
             <div class="center-bold"></div>
         </section>
-        <section id="hab" class="container-fluid principais-habilidades">
+        <section id="habilidades" class="container-fluid principais-habilidades">
             <h1>Principais Habilidades</h1>
             <div class=polaroid>
                 <img class="img-fluid" src="imagens/javascript-vs-html-vs-css-1024x683.jpg">
