--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     </div>
     <section id="contato">
       <h1>Contato</h1>
-      <div class="container-fluid rodape rounded">
+      <div class="container-fluid rodape">
         E-mail: tiagoborgesnascimento2020@gmail.com
         <br>Tel: (11) 984262404
       </div>
