--- a/index.html
+++ b/index.html
@@ -106,12 +106,10 @@
             </div>
         </section>
     </div>
-    <section id="contato">
-      <h1>Contato</h1>
-      <div class="container-fluid rodape">
+    <section id="contato" class="container-fluid  rodape">
+        <h1>Contato</h1>
         E-mail: tiagoborgesnascimento2020@gmail.com
         <br>Tel: (11) 984262404
-      </div>
     </section>
       </body>
 </html> 
