--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <img src="imagens/IMG-20191025-WA0008.jpg" class="img-fluid rounded border border-0 img-perfil" alt="...">
           </div>
         <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">Tiago Borges Nascimento -- Vitor Safada hackeou este site!!!!!</a>
+            <a class="navbar-brand" href="#">Tiago Borges Nascimento</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
