--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     E aí, prazer em conhecê-lo(ª)! 
                     <br>Meu nome é <u>Tiago</u> e eu tenho 21 anos.
                     <br>Moro em Barueri - São Paulo.</br>
-                    Formando recente em Análise e Desenvolvimento de Sistemas pela Fatec.
+                    Graduando em Análise e Desenvolvimento de Sistemas pela Fatec.
                     <br>Atualmente estagiário em desenvolvimento Java na Ericsson<br>
                 </h4>
             </div>
