reestruturação do site em desenvolvimento

--- a/index.html
+++ b/index.html
@@ -5,112 +5,19 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="css/normalize.css" rel="stylesheet">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <link href="css/style.css" rel="stylesheet">
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+        <link rel="shortcut icon" href="./imagens/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="./imagens/favicon.ico" type="image/x-icon">
+        <!-- CSS only -->
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+
+<!-- JS, Popper.js, and jQuery -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     </head> 
-    <body>
-    <div id="fundo" class="container-fluid">
-        <div class="text-center">
-            <img src="imagens/IMG-20191025-WA0008.jpg" class="img-fluid rounded border border-0 img-perfil" alt="...">
-          </div>
-        <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">Tiago Borges Nascimento</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-              <ul class="navbar-nav">
-                <li class="nav-item active">
-                  <a class="nav-link" href="#sobre-mim">Sobre mim<span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#habilidades">Habilidades</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#contato">Contato</a>
-                </li>
-              </ul>
-            </div>
-          </nav>
-        <hr>
-        <section id="sobre-mim">
-            <div class="sobre-mim">
-            <h1>Sobre mim</h1>
-                <h4>
-                    E aí, prazer em conhecê-lo(ª)! 
-                    <br>Meu nome é <u>Tiago</u> e eu tenho 21 anos.
-                    <br>Moro em Barueri - São Paulo.</br>
-                    Graduando em Análise e Desenvolvimento de Sistemas pela Fatec.
-                    <br>Atualmente estagiário em desenvolvimento Java na Ericsson<br>
-                </h4>
-            </div>
-            <div class="center-bold"></div>
-        </section>
-        <section id="habilidades" class="container-fluid principais-habilidades">
-            <h1>Principais Habilidades</h1>
-            <div class=polaroid>
-                <img class="img-fluid" src="imagens/javascript-vs-html-vs-css-1024x683.jpg">
-                <div class="overlay">
-                    <div class="text">HTML5 + CSS3 + JS</div>
-                  </div>
-            </div>
-            <div class=polaroid>
-                <img class="img-fluid" src="imagens/java-8.jpg">
-                <div class="overlay">
-                    <div class="text">Java</div>
-                  </div>
-            </div>
-            <div class=polaroid>
-                <img class="img-fluid" src="imagens/OG-Spring.png">
-                <div class="overlay">
-                    <div class="text">Spring</div>
-                  </div>
-            </div>
-            <div class=polaroid>
-                <img class="img-fluid" src="imagens/kotlin-android-s-official-language-01.png">
-                <div class="overlay">
-                    <div class="text">Kotlin</div>
-                  </div>
-            </div>
-            <div class=polaroid>
-                <img class="img-fluid" src="imagens/asp-net-core-identity-with-patterns.jpg">
-                <div class="overlay">
-                    <div class="text">.NET Core</div>
-                  </div>
-            </div>
-            <div class=polaroid>
-                <img class="img-fluid" src="imagens/20175743697139.jpg">
-                <div class="overlay">
-                    <div class="text">SQL</div>
-                  </div>
-            </div>
-            <div class=polaroid>
-                <img class="img-fluid" src="imagens/thymeleaf.png">
-                <div class="overlay">
-                    <div class="text">Thymeleaf</div>
-                  </div>
-            </div>
-            <div class=polaroid>
-                <img class="img-fluid" src="imagens/docker-na-pratica-como-construir-uma-aplicacao-2.png">
-                <div class="overlay">
-                    <div class="text">Docker</div>
-                  </div>
-            </div>
-            <div class=polaroid>
-                <img class="img-fluid" src="imagens/design-patterns.png">
-                <div class="overlay">
-                    <div class="text">Design Patterns</div>
-                  </div>
-            </div>
-        </section>
-    </div>
-    <section id="contato" class="container-fluid  rodape">
-        <h1>Contato</h1>
-        E-mail: tiagoborgesnascimento2020@gmail.com
-        <br>Tel: (11) 984262404
-    </section>
-      </body>
+    <body class="bg-dark d-flex justify-content-center mt-5">
+      <div>
+        <div class="mx-auto spinner-border text-light mt-5" style="width: 15rem; height: 15rem;" role="status">
+          <span class="sr-only">Loading...</span>
+    </body>
 </html> 
