--- a/index.html
+++ b/index.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-    <head>
-        <title>Tiago Borges Nascimento</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="css/normalize.css" rel="stylesheet">
-        <link rel="shortcut icon" href="./imagens/favicon.ico" type="image/x-icon">
-        <link rel="icon" href="./imagens/favicon.ico" type="image/x-icon">
-        <!-- CSS only -->
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-
-<!-- JS, Popper.js, and jQuery -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-    </head> 
-    <body class="bg-dark d-flex justify-content-center mt-5">
-      <div>
-        <div class="mx-auto spinner-border text-light mt-5" style="width: 15rem; height: 15rem;" role="status">
-          <span class="sr-only">Loading...</span>
-    </body>
-</html> 
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="materialize/css/materialize.min.css">
+  <link rel="stylesheet" href="materialize/css/style.css">
+  <script src="/materialize/js/materialize.min.js"></script>
+  <script src="/materialize/js/index.js"></script>
+  <title>Tiago Borges Nascimento</title>
+</head>
+<body>
+  <h3>Tiago Borges Nascimento</h3>
+  <h5>22 years old</h5>
+  <h5>Brazil, Barueri - SP</h5>
+  <h5>@java and @c++ software engineer</h5>
+  <br>
+  <h6 id='dots'>page in development</h6>
+</body>
+</html>
