--- a/index.html
+++ b/index.html
@@ -11,11 +11,25 @@
   <title>Tiago Borges Nascimento</title>
 </head>
 <body>
-  <h3>Tiago Borges Nascimento</h3>
-  <h5>22 years old</h5>
-  <h5>Brazil, Barueri - SP</h5>
-  <h5>@java and @c++ software engineer</h5>
-  <br>
-  <h6 id='dots'>page in development</h6>
+  <div class="text">
+
+    <h3>Tiago Borges Nascimento</h3>
+    <h5>22 years old</h5>
+    <h5>Brazil, Barueri - SP</h5>
+    <h5>@java </h5> <h6> and </h6>   <h5>@c++ </h5> <h6>software engineer</h6>
+    <br>
+    <h6 id='dots'>page in development</h6>
+
+  </div>
+
+  <div class="circle-img">
+
+      <a href="https://github.com/tiagoborgesnascimento">
+        <div class="icon1" ></div>
+      </a>
+      <a href="https://www.linkedin.com/in/tiago-borges-nascimento-0b8718141/">
+        <div class="icon2"></div>
+      </a>
+  </div>
 </body>
 </html>
